tests/types/errors/match_result_mismatch.err
1. error[T008]: type mismatch: expected int, got string
  --> tests/types/errors/match_result_mismatch.mochi:1:14

  1 | let x: int = match 1 {
    |              ^

help:
  Change the value to match the expected type.
